// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UUIProvider - customize 1`] = `
Array [
  <div
    className="UUI-TestComponent-Root root-base-classname"
    style={
      Object {
        "backgroundColor": "green",
        "fontWeight": 300,
      }
    }
  >
    <div
      className="UUI-TestComponent-Node node-base-classname"
      style={
        Object {
          "height": 300,
          "width": 200,
        }
      }
    />
    <div
      className="UUI-TestComponent-ExtendTest"
    >
      <div>
        Original
      </div>
    </div>
  </div>,
  <div
    className="UUI-TestUnionComponent-Root"
  >
    <div
      className="UUI-TestComponent-Root root-base-classname UUI-TestUnionComponent-TestComponent"
      style={
        Object {
          "backgroundColor": "green",
          "fontWeight": 300,
        }
      }
    >
      <div
        className="UUI-TestComponent-Node node-base-classname"
        style={
          Object {
            "height": 300,
            "width": 200,
          }
        }
      />
      <div
        className="UUI-TestComponent-ExtendTest"
      >
        <div>
          Original
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`UUIProvider - customize 2`] = `
Array [
  <div
    className="UUI-TestComponent-Root root-base-classname GlobalExtendButtonClassName"
    style={
      Object {
        "backgroundColor": "red",
        "color": "blue",
        "fontWeight": 400,
      }
    }
  >
    <div
      className="UUI-TestComponent-Node node-base-classname"
      style={
        Object {
          "height": 300,
          "width": 200,
        }
      }
    />
    <div
      className="UUI-TestComponent-ExtendTest"
    >
      <div>
        Original
      </div>
    </div>
  </div>,
  <div
    className="UUI-TestUnionComponent-Root"
    style={
      Object {
        "display": "flex",
      }
    }
  >
    <div
      className="UUI-TestComponent-Root root-base-classname GlobalExtendButtonClassName UUI-TestUnionComponent-TestComponent"
      style={
        Object {
          "backgroundColor": "red",
          "color": "pink",
          "fontWeight": 400,
        }
      }
    >
      <div
        className="UUI-TestComponent-Node node-base-classname"
        style={
          Object {
            "height": 300,
            "width": 200,
          }
        }
      />
      <div
        className="UUI-TestComponent-ExtendTest"
      >
        <div>
          Original
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`UUIProvider - customize 3`] = `
Array [
  <div
    className="UUI-TestComponent-Root root-base-classname GlobalExtendButtonClassName"
    style={
      Object {
        "backgroundColor": "red",
        "color": "yellow",
        "fontSize": 34,
        "fontWeight": 400,
      }
    }
  >
    <div
      className="UUI-TestComponent-Node node-base-classname"
      style={
        Object {
          "height": 300,
          "width": 200,
        }
      }
    />
    <div
      className="UUI-TestComponent-ExtendTest"
    >
      <div>
        Original
      </div>
    </div>
  </div>,
  <div
    className="UUI-TestComponent-Root root-base-classname GlobalExtendButtonClassName"
    style={
      Object {
        "backgroundColor": "red",
        "color": "yellow",
        "fontSize": 34,
        "fontWeight": 400,
      }
    }
  >
    <div
      className="UUI-TestComponent-Node node-base-classname"
      style={
        Object {
          "height": 300,
          "width": 200,
        }
      }
    />
    <div
      className="UUI-TestComponent-ExtendTest"
    >
      <div>
        Original
      </div>
    </div>
  </div>,
  <div
    className="UUI-TestUnionComponent-Root"
    style={
      Object {
        "display": "flex",
      }
    }
  >
    <div
      className="UUI-TestComponent-Root root-base-classname GlobalExtendButtonClassName UUI-TestUnionComponent-TestComponent"
      style={
        Object {
          "backgroundColor": "red",
          "color": "aliceblue",
          "fontWeight": 400,
        }
      }
    >
      <div
        className="UUI-TestComponent-Node node-base-classname"
        style={
          Object {
            "height": 300,
            "width": 200,
          }
        }
      />
      <div
        className="UUI-TestComponent-ExtendTest"
      >
        <div>
          Original
        </div>
      </div>
    </div>
  </div>,
  <div
    className="UUI-TestUnionComponent-Root"
    style={
      Object {
        "display": "flex",
      }
    }
  >
    <div
      className="UUI-TestComponent-Root root-base-classname GlobalExtendButtonClassName UUI-TestUnionComponent-TestComponent"
      style={
        Object {
          "backgroundColor": "red",
          "color": "cornsilk",
          "fontWeight": 400,
        }
      }
    >
      <div
        className="UUI-TestComponent-Node node-base-classname"
        style={
          Object {
            "height": 300,
            "width": 200,
          }
        }
      />
      <div
        className="UUI-TestComponent-ExtendTest"
      >
        <div>
          Original
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`UUIProvider - options 1`] = `
Array [
  <div
    className="XUI=TestComponent=Root root-base-classname"
    style={
      Object {
        "backgroundColor": "green",
        "fontWeight": 300,
      }
    }
  >
    <div
      className="XUI=TestComponent=Node node-base-classname"
      style={
        Object {
          "height": 300,
          "width": 200,
        }
      }
    />
    <div
      className="XUI=TestComponent=ExtendTest"
    >
      <div>
        Original
      </div>
    </div>
  </div>,
  <div
    className="XUI=TestComponent=Root root-base-classname"
    style={
      Object {
        "backgroundColor": "green",
        "fontWeight": 300,
      }
    }
  >
    <div
      className="XUI=TestComponent=Node node-base-classname"
      style={
        Object {
          "height": 300,
          "width": 200,
        }
      }
    />
    <div
      className="XUI=TestComponent=ExtendTest"
    >
      <div>
        Original
      </div>
    </div>
  </div>,
]
`;

exports[`UUIProvider - options 2`] = `
Array [
  <div
    className="XUI=TestComponent=Root root-base-classname"
    style={
      Object {
        "backgroundColor": "green",
        "fontWeight": 300,
      }
    }
  >
    <div
      className="XUI=TestComponent=Node node-base-classname"
      style={
        Object {
          "height": 300,
          "width": 200,
        }
      }
    />
    <div
      className="XUI=TestComponent=ExtendTest"
    >
      <div>
        Original
      </div>
    </div>
  </div>,
  <div
    className="YUI+TestComponent+Root root-base-classname"
    style={
      Object {
        "backgroundColor": "green",
        "fontWeight": 300,
      }
    }
  >
    <div
      className="YUI+TestComponent+Node node-base-classname"
      style={
        Object {
          "height": 300,
          "width": 200,
        }
      }
    />
    <div
      className="YUI+TestComponent+ExtendTest"
    >
      <div>
        Original
      </div>
    </div>
  </div>,
]
`;
